[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxinject"
version = "0.1.1"
description = ""
authors = [{ name = "rodbell", email = "bellirodrigo2@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "typing-extensions>=4.13.2",
    "typemapping @ git+https://github.com/bellirodrigo2/typemapping.git@main"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.11.7",
    "mypy>=1.15.0",
    "types-python-dateutil>=2.9.0.20241206",

]
