[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxinject"
version = "0.1.1"
description = ""
authors = [{ name = "rodbell", email = "bellirodrigo2@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "typing-extensions>=4.13.2",
    "typemapping>=0.1.2",
    "orjson"
]


[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.11.5",
    "ruff>=0.11.7",
    "mypy>=1.15.0",
    "types-python-dateutil",
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov",
    "pydantic>=2.0",
    "pydantic[email]"
]
pydantic = [
    "pydantic>=2.0",
    "pydantic[email]"
]